fixed a few more things on mobile and added missing details-mobile

--- a/style.css
+++ b/style.css
@@ -41,12 +41,23 @@ a:hover {
 	color: #1b4e68;
 }
 
+#mobile-details {
+	grid-area: mobile-details;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+}
+
 #wrapper {
 	border-radius: 10px;
 	background: #fff;
-	max-width: 80vw;
-	margin: 70px auto;
+	max-width: 90vw;
+	margin: 20px auto;
 	overflow: hidden;
+}
+
+#main-content {
+	padding: 20px;
+	grid-area: content;
 }
 
 #header {
@@ -55,12 +66,6 @@ a:hover {
 	background: #5B7DA4;
 	color: #fff;
 	grid-area: header;
-}
-
-#mobile-details {
-	grid-area: mobile-details;
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
 }
 
 #resume {
@@ -77,6 +82,19 @@ a:hover {
 		display: none;
 	}
 
+	#wrapper {
+		border-radius: 10px;
+		background: #fff;
+		max-width: 80vw;
+		margin: 70px auto;
+		overflow: hidden;
+	}
+
+	#main-content {
+		padding: 50px;
+		grid-area: content;
+	}
+
 	#resume {
 		display: grid;
 		grid-template-areas:
@@ -84,12 +102,6 @@ a:hover {
 			"mobile-details mobile-details"
 			"content sidebar";
 	}
-}
-
-#main-content {
-	grid-column: 1 / 3;
-	padding: 50px;
-	grid-area: content;
 }
 
 #sidebar {
